@@ -1,6 +1,6 @@
 # Process this file with autoconf to produce a configure script.
 AC_INIT([src/ui.c])
-AM_INIT_AUTOMAKE(pwman, 0.3.4)
+AM_INIT_AUTOMAKE(pwman, 0.3.5)
 AM_CONFIG_HEADER(config.h)
 
 # Checks for programs.
